; ModuleID = '/home/carl/AnghaBench/linux/drivers/phy/qualcomm/extr_phy-qcom-ufs.c_ufs_qcom_phy_disable_ref_clk.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/phy/qualcomm/extr_phy-qcom-ufs.c_ufs_qcom_phy_disable_ref_clk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ufs_qcom_phy = type { i32, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ufs_qcom_phy*)* @ufs_qcom_phy_disable_ref_clk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ufs_qcom_phy_disable_ref_clk(%struct.ufs_qcom_phy* %0) #0 {
  %2 = alloca %struct.ufs_qcom_phy*, align 8
  store %struct.ufs_qcom_phy* %0, %struct.ufs_qcom_phy** %2, align 8
  %3 = load %struct.ufs_qcom_phy*, %struct.ufs_qcom_phy** %2, align 8
  %4 = getelementptr inbounds %struct.ufs_qcom_phy, %struct.ufs_qcom_phy* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %28

7:                                                ; preds = %1
  %8 = load %struct.ufs_qcom_phy*, %struct.ufs_qcom_phy** %2, align 8
  %9 = getelementptr inbounds %struct.ufs_qcom_phy, %struct.ufs_qcom_phy* %8, i32 0, i32 3
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @clk_disable_unprepare(i64 %10)
  %12 = load %struct.ufs_qcom_phy*, %struct.ufs_qcom_phy** %2, align 8
  %13 = getelementptr inbounds %struct.ufs_qcom_phy, %struct.ufs_qcom_phy* %12, i32 0, i32 2
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %7
  %17 = load %struct.ufs_qcom_phy*, %struct.ufs_qcom_phy** %2, align 8
  %18 = getelementptr inbounds %struct.ufs_qcom_phy, %struct.ufs_qcom_phy* %17, i32 0, i32 2
  %19 = load i64, i64* %18, align 8
  %20 = call i32 @clk_disable_unprepare(i64 %19)
  br label %21

21:                                               ; preds = %16, %7
  %22 = load %struct.ufs_qcom_phy*, %struct.ufs_qcom_phy** %2, align 8
  %23 = getelementptr inbounds %struct.ufs_qcom_phy, %struct.ufs_qcom_phy* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @clk_disable_unprepare(i64 %24)
  %26 = load %struct.ufs_qcom_phy*, %struct.ufs_qcom_phy** %2, align 8
  %27 = getelementptr inbounds %struct.ufs_qcom_phy, %struct.ufs_qcom_phy* %26, i32 0, i32 0
  store i32 0, i32* %27, align 8
  br label %28

28:                                               ; preds = %21, %1
  ret void
}

declare dso_local i32 @clk_disable_unprepare(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
